# Sample-based-GNN

./: .gitignore  CMakeLists.txt  README.md  citeseer.perf  cpu.sh  epoch_time.csv  exp_vary.sh  gat_citeseer_sample.cfg  gat_cora_sample.cfg  gat_lj_large_reorder_sample.cfg  gat_papers100M_reorder_sample.cfg  gat_products_reorder_sample.cfg  gat_reddit_reorder_sample.cfg  gat_reddit_sample.cfg  gcn_citeseer.cfg  gcn_citeseer_sample.cfg  gcn_compute_sample.cfg  gcn_cora.cfg  gcn_cora_sample.cfg  gcn_ogb_arxiv.cfg  gcn_ogbn-arxiv_sample.cfg  gcn_orkut_reorder_sample.cfg  gcn_photo_sample.cfg  gcn_ppi_sample.cfg  gcn_products_reorder_sample.cfg  gcn_products_sample.cfg  gcn_pubmed.cfg  gcn_pubmed_sample.cfg  gcn_reddit.cfg  gcn_reddit_all_sample.cfg  gcn_reddit_reorder_sample.cfg  gcn_reddit_sample.cfg  gcn_test.cfg  gcn_wiki_reorder_sample.cfg  gcn_wiki_reorder_sample_2.cfg  gcn_wiki_reorder_sample_3.cfg  gcn_wiki_reorder_sample_5.cfg  gcn_wiki_sample.cfg  get_log_run_time.py  get_rate.py  (+22 more)
core/: FullyRepGraph.hpp  GraphSegment.cpp  GraphSegment.h  NtsScheduler.hpp  coocsc.hpp  graph.hpp  neutronstar.hpp  ntsBaseOp.hpp  ntsCPUFusedGraphOp.hpp  ntsCacheContext.hpp  ntsContext.hpp  ntsDataloador.hpp  ntsDistCPUGraphOp.hpp  ntsDistGPUFusedGraphOp.hpp  ntsDistGPUGraphOp.hpp  ntsFastSampler.hpp  ntsGraphOp.hpp  ntsMiniBatchGraphOp.hpp  ntsPushdownGraphOp.hpp  ntsSingleCPUGraphOp.hpp  (+3 more)
cuda/: CMakeLists.txt  cuda_type.h  ntsCUDA.hpp  ntsCUDABitmap.cuh  ntsCUDADistKernel.cuh  ntsCUDAFuseKernel.cuh  ntsCUDAGraphOP.cu  ntsCUDATransferKernel.cuh  ntsCudaTest.cu  ntsCudaTest.cuh
(+1076 files in other folders)
